--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -1,5 +1,44 @@
 .chartContent {
-    width: 80vw;
-    height: 50vw;
+    width: 70vw;
+    height: 45vw;
     margin: 0 auto;
+}
+
+.center {
+    text-align: center;
+    width: 100%;
+}
+
+.radio-toolbar {
+    margin: 10px;
+}
+
+.radio-toolbar input[type="radio"] {
+    opacity: 0;
+    position: fixed;
+    width: 0;
+}
+
+.radio-toolbar label {
+    display: inline-block;
+    background-color: #f2f2f2;
+    padding: 5px 20px;
+    font-family: sans-serif, Arial;
+    font-size: 16px;
+    border: 2px solid #d9d9d9;
+    border-radius: 50px;
+    transition: all 0.3s ease-in;
+}
+
+.radio-toolbar label:hover {
+    background-color: #ffffff;
+}
+
+.radio-toolbar input[type="radio"]:focus+label {
+    
+}
+
+.radio-toolbar input[type="radio"]:checked+label {
+    background-color: #ffd480;
+    border-color: #808080;
 }
