--- a/styles/cityStyle.css
+++ b/styles/cityStyle.css
@@ -5,6 +5,7 @@
         width: 50%; 
         float: left;
         height: calc(70vw/2);
+        padding: 0 0 50px 0;
     }
 }
 
@@ -13,5 +14,6 @@
         width: 25%; 
         float: left;
         height: calc(70vw/4);
+        padding: 0 0 50px 0;
     }
 }
