--- a/styles/commonStyle.css
+++ b/styles/commonStyle.css
@@ -2,23 +2,11 @@
     width: 100%;
     height: 70vw;
     margin: 0 auto;
-    padding: 0 0 50px 0;
-    flex-direction: row;
 }
 
-.page-container {
-    display: flex;
-    min-height: 100vh;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
-.footer {
+.center {
     text-align: center;
     width: 100%;
-    bottom: 0;
-    position: sticky;
-    background-color: rgba(255,255,255,0.85);
 }
 
 .radio-toolbar {
@@ -46,6 +34,10 @@
 
 .radio-toolbar label:hover {
     background-color: #ffffff;
+}
+
+.radio-toolbar input[type="radio"]:focus+label {
+    
 }
 
 .radio-toolbar input[type="radio"]:checked+label {
