--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -1,10 +1,72 @@
-@import "commonStyle.css";
+.chartContent {
+    width: 100%;
+    height: 70vw;
+    margin: 0 auto;
+    padding: 0 0 50px 0;
+    flex-direction: row;
+}
 
-@media only screen and (min-width: 1440px) {
-   .chartContent {
-        width: 70vw;
-        height: 48vw;
-        margin: 0 auto;
-        padding: 0 0 50px 0;
+.page-container {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.footer {
+    text-align: center;
+    width: 100%;
+    bottom: 0;
+    position: sticky;
+    background-color: rgba(255,255,255,0.85);
+}
+
+.radio-toolbar {
+    padding: 20px 0px 20px 0px;
+}
+
+.radio-toolbar input[type="radio"] {
+    opacity: 0;
+    position: fixed;
+    width: 0;
+}
+
+.radio-toolbar label {
+    text-align: center;
+    display: inline-block;
+    background-color: #f2f2f2;
+    margin: 5px;
+    font-family: sans-serif, Arial;
+    font-size: 3em;
+    border: 3px solid #f2f2f2;
+    border-radius: 50px;
+    transition: all 0.3s ease-in;
+    width: 45%;
+}
+
+.radio-toolbar label:hover {
+    background-color: #ffffff;
+}
+
+.radio-toolbar input[type="radio"]:checked+label {
+    background-color: #ffd480;
+    border: 3px solid #ffd480;
+}
+
+@media only screen and (min-width: 1080px) {
+    .radio-toolbar label {
+        width: auto;
+        padding: 3px 20px;
+        font-size: 1em;
+        margin: 0px;
     }
 }
+
+@media only screen and (min-width: 1440px) {
+    .chartContent {
+         width: 70vw;
+         height: 48vw;
+         margin: 0 auto;
+         padding: 0 0 50px 0;
+     }
+ }
