--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -1,11 +1,20 @@
+.hidden-button {
+    opacity: 0;
+    background-color: #ffd480;
+}
+
+.hidden-button:hover {
+    opacity: 35;
+    transition: all 0.3s ease-in;
+}
+
 .chartContent {
     width: 100%;
     height: 70vw;
     margin: 0 auto;
-    padding: 0 0 50px 0;
+    padding: 0 0 40px 0;
     flex-direction: row;
 }
-
 .page-container {
     display: flex;
     min-height: 100vh;
@@ -64,9 +73,10 @@
 
 @media only screen and (min-width: 1440px) {
     .chartContent {
-         width: 70vw;
-         height: 48vw;
-         margin: 0 auto;
-         padding: 0 0 50px 0;
-     }
- }
+        height: 48vw;
+    }
+
+    .page-container {
+        padding: 0 calc(100% * .15) 0 calc(100% * .15);
+    }
+}
