--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -8,13 +8,35 @@
     transition: all 0.3s ease-in;
 }
 
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    border-radius: 5%;
+    text-align: center;
+    background-color: #f2f2f2;
+    color: #999999;
+    font-size: large;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 1rem;
+}
+  
+/* Remove extra left and right margins, due to padding */
+.card-container {
+    padding: 0 0 50px 0;
+    margin: 0 auto;
+    display: grid;
+    grid-gap: 1rem;
+    grid-template-columns: 90%;
+    justify-content: center;
+}
+
 .chartContent {
     width: 100%;
     height: 70vw;
     margin: 0 auto;
-    padding: 0 0 40px 0;
+    padding: 0 0 50px 0;
     flex-direction: row;
 }
+
 .page-container {
     display: flex;
     min-height: 100vh;
@@ -46,7 +68,7 @@
     background-color: #f2f2f2;
     margin: 5px;
     font-family: sans-serif, Arial;
-    font-size: 3em;
+    font-size: xx-large;
     border: 3px solid #f2f2f2;
     border-radius: 50px;
     transition: all 0.3s ease-in;
@@ -62,12 +84,20 @@
     border: 3px solid #ffd480;
 }
 
-@media only screen and (min-width: 1080px) {
+@media only screen and (min-width: 1070px) {
     .radio-toolbar label {
         width: auto;
         padding: 3px 20px;
         font-size: 1em;
         margin: 0px;
+    }
+
+    .card-container { 
+        grid-template-columns: 230px 350px 230px;
+    }
+
+    .card {
+        font-size: smaller;
     }
 }
 
