--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -18,6 +18,10 @@
     font-family: Arial, Helvetica, sans-serif;
     padding: 1rem;
 }
+
+.card-big-num {
+    font-size: 3em;
+}
   
 /* Remove extra left and right margins, due to padding */
 .card-container {
@@ -84,7 +88,7 @@
     border: 3px solid #ffd480;
 }
 
-@media only screen and (min-width: 1090px) {
+@media only screen and (min-width: 1080px) {
     .radio-toolbar label {
         width: auto;
         padding: 3px 20px;
@@ -94,6 +98,10 @@
 
     .card-container { 
         grid-template-columns: 230px 350px 230px;
+    }
+
+    .card-big-num {
+        font-size: 2.75em;
     }
 
     .card {
