--- a/styles/cityStyle.css
+++ b/styles/cityStyle.css
@@ -13,6 +13,14 @@
     justify-content: space-between;
 }
 
+.page-title {
+    text-align: center;
+    width: 100%;
+    font-size: 1.6em;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0 0 20px 0;
+}
+
 .footer {
     text-align: center;
     width: 100%;
