--- a/styles/cityStyle.css
+++ b/styles/cityStyle.css
@@ -18,7 +18,7 @@
     width: 100%;
     font-size: 1.7em;
     font-family: Arial, Helvetica, sans-serif;
-    padding: 0 0 20px 0;
+    padding: 0 0 20px 8px;
 }
 
 .footer {
