--- a/styles/cityStyle.css
+++ b/styles/cityStyle.css
@@ -8,7 +8,7 @@
 
 .page-container {
     display: flex;
-    min-height: 100vh;
+    min-height: 100%;
     flex-direction: column;
     justify-content: space-between;
 }
