--- a/styles/cityStyle.css
+++ b/styles/cityStyle.css
@@ -1,3 +1,17 @@
+.hidden-button {
+    opacity: 0;
+    background-color: #ffd480;
+}
+
+.hidden-button:hover {
+    opacity: 35;
+    transition: all 0.3s ease-in;
+}
+
+.chart-area {
+    background-color: white;
+}
+
 .chartContent {
     width: 100%;
     height: 70vw;
