--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -47,9 +47,12 @@
 }
 
 .page-container {
-    display: flex;
+    width: 100% !important;
+    min-width: 100% !important;
+    max-width: 100% !important;
     min-height: 100vh;
-    min-width: 100%;
+    padding: 0 0 0 0 !important;
+    display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
@@ -124,10 +127,5 @@
         height: 48vw;
         max-height: 90vh;
         width: 100%;
-    }
-
-    .page-container {
-        max-width: 100% !important
-        padding: 0 0 0 0 !important
     }
 }
