--- a/styles/indexStyle.css
+++ b/styles/indexStyle.css
@@ -43,20 +43,18 @@
     font-family: sans-serif;
     text-align: center;
     padding: 30px 0 0 0;
+    background-color: white;
 }
 
 .chartContent {
-    width: 99vw !important;
+    width: 95vw;
     height: 70vw;
     margin: 0 auto;
-    padding: 0 0 0 0;
 }
 
 .page-container {
-    width: 99vw !important;
     position: relative;
     min-height: 100vh;
-    padding: 0 0 0 0 !important;
 }
 
 .footer {
@@ -122,9 +120,7 @@
     .card {
         font-size: .9em;
     }
-}
 
-@media only screen and (min-width: 1440px) {
     .chartContent {
         height: 48vw;
         max-height: 90vh;
